# ghpr

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.macos  build.sh
src/: app.rs  config.rs  diff_view.rs  github.rs  highlight.rs  input.rs  main.rs  ui.rs
